--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/lodash": "^4.17.16",
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
