--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@icons-pack/react-simple-icons": "^12.7.0",
     "@types/lodash": "^4.17.16",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
