--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{ts,tsx}": "next lint --fix",
-  "*.{ts,tsx,json,md,css}": "prettier --write"
+  "*.{ts,tsx}": "next lint --dir src",
+  "*.{ts,tsx,json,md,css}": "prettier --write \"src/**/*.{ts,tsx,css}\""
 }
