--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9",
